# ralgo

./: .gitignore  .pylintrc  Makefile  README.md  README.rst  dev.requirements.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  style.yml  tests.yml
docs/: explain.docx
ralgo/: __init__.py  decode.py  decoder.py  encode.py  encoder.py  exceptions.py  ralgo.py  utils.py
ralgo/ext/compressor/: __init__.py  compress.py  decompress.py
ralgo/ext/graphical/: decode.py  encode.py  square.py
tests/: asserts.py  test_decode.py  test_encode.py
tests/bytes/: test_bytes.py
tests/compressor/: test_compress.py  test_decompress.py  test_full_op.py
tests/graphical/: test_decode.py  test_encode.py  test_full_op.py
