[metadata]
name = Ralgo
version = attr: ralgo.__version__
url = https://github.com/Rom1-J/ralgo/
author = Romain J.
author_email = romain@gnous.eu
maintainer = Romain J.
maintainer_email = romain@gnous.eu
description = PoC for an encoding/decoding algorithm using prime factor, transposed matrix and random
long_description = file: README.rst
license = agplv3
platforms = linux

[options]
python_requires = >=3.9
install_requires =
	numpy==1.20.1
	Pillow==8.1.0
	sympy==1.7.1
